<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item android:id="@+id/tickets"
    android:title="@string/tickets"
    android:icon="@drawable/flight"
    app:showAsAction="ifRoom"
    />
    <item android:id="@+id/hotel"
        android:title="@string/hotel"
        android:icon="@drawable/bed"
        app:showAsAction="ifRoom"
        />
    <item android:id="@+id/shorts"
        android:title="@string/shorts"
        android:icon="@drawable/location"
        app:showAsAction="ifRoom"
        />
    <item android:id="@+id/sings"
        android:title="@string/sings"
        android:icon="@drawable/notification"
        app:showAsAction="ifRoom"
        />
    <item android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/person"
        app:showAsAction="ifRoom"
        />
</menu>