<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#242529"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="74dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:background="#242529"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/hardWay"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/img_5" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:gravity="center"
                        android:text="@string/hard_road"
                        android:textColor="@color/white" />
                </LinearLayout>

                <Space
                    android:layout_width="23dp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="#242529"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/where_go"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/img_2" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="2"
                        android:text="@string/every_where"
                        android:textColor="@color/white" />

                </LinearLayout>

                <Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="#242529"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/holidays"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/img_3" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="37dp"
                        android:gravity="center"
                        android:text="@string/holidays"
                        android:textColor="@color/white" />
                </LinearLayout>

                <Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:background="#242529"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/hot_tickets"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/img_4" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:gravity="center"
                        android:text="@string/hot_tickets"
                        android:textColor="@color/white" />

                </LinearLayout>

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:id="@+id/Istambul"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/img_9" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteY="56dp"></LinearLayout>

                <ImageView
                    android:id="@+id/Sochi"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="@+id/Istambul"
                    app:layout_constraintStart_toStartOf="@+id/Istambul"
                    app:layout_constraintTop_toBottomOf="@+id/Istambul"
                    app:srcCompat="@drawable/img_10" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteY="106dp"></LinearLayout>

                <ImageView
                    android:id="@+id/Phuket"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/Sochi"
                    app:layout_constraintStart_toStartOf="@+id/Sochi"
                    app:layout_constraintTop_toBottomOf="@+id/Sochi"
                    app:srcCompat="@drawable/img_11" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteY="155dp"></LinearLayout>

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Phuket"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/textView6"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/textView6"
                    app:layout_constraintTop_toTopOf="@+id/Phuket" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/away"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/Istambul"
                    app:layout_constraintEnd_toEndOf="@+id/textView3"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/textView3" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/Istambyl"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/Istambul"
                    app:layout_constraintTop_toTopOf="@+id/Istambul" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Sochi"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/textView2"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/Sochi" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/away"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/Phuket"
                    app:layout_constraintEnd_toEndOf="@+id/textView1"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/textView1" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/away"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/Sochi"
                    app:layout_constraintEnd_toEndOf="@+id/textView9"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/textView9" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>