<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    tools:context=".fragments.TicketsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:ellipsize="end"
            android:gravity="center"
            android:lines="2"
            android:text="@string/find_chip_ticket"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:foregroundGravity="center"
            app:cardBackgroundColor="@color/litle_gray"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@color/gray"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/gray"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/search" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical">

                            <LinearLayout
                                android:id="@+id/l2"
                                android:layout_width="20dp"
                                android:layout_height="50dp"
                                android:layout_weight="1"
                                android:orientation="horizontal">

                                <ImageView
                                    android:id="@+id/plane"
                                    android:layout_width="20dp"
                                    android:layout_height="50dp"
                                    android:layout_weight="1"
                                    android:src="@drawable/img"
                                    android:visibility="gone" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/l"
                                android:layout_width="20dp"
                                android:layout_height="50dp"
                                android:layout_weight="1"
                                android:orientation="horizontal">

                                <ImageView
                                    android:id="@+id/imageView2"
                                    android:layout_width="20dp"
                                    android:layout_height="50dp"
                                    android:src="@drawable/search"
                                    android:visibility="gone" />
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/gray"
                            android:orientation="vertical">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <EditText
                                    android:id="@+id/editWhereFrom"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@null"
                                    android:ems="10"
                                    android:hint="@string/where_from"
                                    android:inputType="text"
                                    android:padding="10dp" />

                                <ImageView
                                    android:id="@+id/clearText1"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentEnd="true"
                                    android:layout_centerVertical="true"
                                    android:padding="10dp"
                                    android:src="@android:drawable/ic_menu_close_clear_cancel"
                                    android:visibility="gone" />
                            </RelativeLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="10dp"
                                android:background="@color/gray2"
                                android:orientation="horizontal" />

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <EditText
                                    android:id="@+id/editWhere"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@null"
                                    android:ems="10"
                                    android:hint="@string/where"
                                    android:inputType="text"
                                    android:padding="10dp" />

                                <ImageView
                                    android:id="@+id/clearText"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentEnd="true"
                                    android:layout_centerVertical="true"
                                    android:padding="10dp"
                                    android:src="@android:drawable/ic_menu_close_clear_cancel"
                                    android:visibility="gone" />
                            </RelativeLayout>

                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@color/black"
            android:orientation="vertical">



        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:background="#242529"
            android:text="@string/music_from"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:foregroundGravity="center"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="8dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/show_every_place"
            app:cardCornerRadius="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:background="@color/black"
                android:text="@string/your_first_time"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"></LinearLayout>

    </LinearLayout>

</ScrollView>
